--- a/params/nav2_multirobot_params_1.yaml
+++ b/params/nav2_multirobot_params_1.yaml
@@ -182,6 +182,11 @@ local_costmap:
       resolution: 0.05
       robot_radius: 0.22
       plugins: ["voxel_layer", "inflation_layer"]
+      filters: ["keepout_filter"]
+      keepout_filter:
+        plugin: "nav2_costmap_2d::KeepoutFilter"
+        enabled: True
+        filter_info_topic: "/costmap_filter_info"
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -217,8 +222,17 @@ global_costmap:
       robot_base_frame: robot1/base_link
       robot_radius: 0.22
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      filters: ["keepout_filter"]
+      keepout_filter:
+        plugin: "nav2_costmap_2d::KeepoutFilter"
+        enabled: True
+        filter_info_topic: "/costmap_filter_info"
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
+        keepout_filter:
+          plugin: "nav2_costmap_2d::KeepoutFilter"
+          enabled: True
+          filter_info_topic: "/costmap_filter_info"
         enabled: True
         observation_sources: scan
         scan:
